# playterm-app

./: .gitignore  Cargo.toml
docs/: LEARN_RUST.md  MILESTONES.md  README.md
playterm/: Cargo.toml
playterm-player/: Cargo.toml
playterm-player/src/: engine.rs  lib.rs  queue.rs  scrobble.rs  stream.rs
playterm-subsonic/: Cargo.toml
playterm-subsonic/src/: client.rs  error.rs  lib.rs  models.rs
playterm/src/: action.rs  app.rs  cache.rs  color.rs  config.rs  history.rs  keybinds.rs  lyrics.rs  main.rs  media_controls.rs  mpris.rs  persist.rs  state.rs  theme.rs  visualizer.rs
playterm/src/ui/: albums.rs  artists.rs  browser.rs  home_tab.rs  kitty_art.rs  layout.rs  mod.rs  now_playing.rs  nowplaying_tab.rs  playlist_overlay.rs  popup.rs  queue.rs  status_bar.rs  tab_bar.rs  tracks.rs  visualizer.rs
