[package]
name = "playterm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "playterm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
playterm-player = { path = "../playterm-player" }
playterm-subsonic = { path = "../playterm-subsonic" }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal"] }
image = "0.24"
base64 = "0.22"
flate2 = "1"
palette_extract = "0.1"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
rustfft = "6"
souvlaki = { version = "0.8", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
souvlaki = { version = "0.8", features = ["use_dbus"] }
