[package]
name = "playterm"
version = "0.1.0"
edition = "2021"
description = "A terminal music player for Subsonic-compatible servers"
license = "MIT"
repository = "https://github.com/awriterandtheword-rgb/playterm-app"
readme = "../docs/README.md"
keywords = ["music", "tui", "subsonic", "navidrome", "terminal"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "playterm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
playterm-player = { version = "0.1.0", path = "../playterm-player" }
playterm-subsonic = { version = "0.1.0", path = "../playterm-subsonic" }
ratatui = { version = "0.29", features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
image = "0.24"
base64 = "0.22"
flate2 = "1"
palette_extract = "0.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
rand = "0.8"
rustfft = "6"

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9"
